syntax = "proto3";

package protobuf;

option go_package = "protobuf/";

message NewConf{
    repeated string new_configuration =1;
}
